# bazel-sample-repo

./: .bazelrc  .bazelrc.remote  .gitignore  README.md  WORKSPACE  pom.xml
.ijwb/: .bazelproject
npm-jvm-image/: BUILD.bazel  README.md  WORKSPACE  external_docker_images.bzl
remote-worker-docker/: Dockerfile  run_worker.sh
setup/: external_jvm.bzl  external_repos.bzl  maven_install.json  scala_setup.bzl  toolchain_setup.bzl
src/main/com/example/api/: BUILD.bazel  Dog.scala
src/main/com/example/app/: BUILD.bazel  Walker.scala  WalkerApp.scala
src/main/com/example/core/: BUILD.bazel  Logger.scala
src/main/java/com/example/: BUILD  JettyRunner.java  JettyRunnerTest.java  JettyRunnerTest2.java  MyLib.java  MyTest.java
src/main/resources/: BUILD.bazel
src/main/scala/com/: BUILD.bazel
src/main/scala/com/cycle_a/: CycleA.scala
src/main/scala/com/cycle_b/: BUILD.bazel  CycleB.scala
src/main/scala/com/example/: BUILD.bazel  JettyRunner.scala  JettyRunnerTest.scala
src/main/scala/com/example2/: BUILD.bazel  JettyRunner.scala  JettyRunnerTest.scala
src/main/scala/com/inner/: BUILD.bazel
src/main/scala/com/inner/with_no_build_file/: NoBuildFile.scala
src/main/scala/com/non_cycle/: BUILD  MyCaseClass.scala
src/other/: BUILD.bazel  readme_link.txt
src/test/com/example/app/: BUILD.bazel  WalkerAppTest.scala
src/test/java/com/example/: BUILD.bazel  MySimpleTest.java
src/test/resources/: BUILD.bazel  readme_link.txt
src/test/scala/com/example/: BUILD.bazel  JettyRunnerTest.scala  MyScalaJavaTest.java  MySimpleTest.java
