package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test", "scala_specs2_junit_test")

scala_library(
    name = "lib",
    srcs = [
        "//src/main/scala/com/cycle_a:sources",
        "//src/main/scala/com/cycle_b:sources",
    ]
)