load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
package(default_visibility = ["//visibility:public"])

scala_library(
    name = "core",
    srcs = glob(["*.scala"]),
    deps = [
        "//src/main/com/example/api:api",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_core",
    ],
    runtime_deps = [
        "//src/main/resources"
    ]
)