package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test", "scala_specs2_junit_test")

scala_library(
    name = "jetty",
    srcs = ["JettyRunner.scala"],
    deps = [
        "@jetty_continuation//jar",
        "@jetty_http//jar",
        "@jetty_io//jar",
        "@jetty_server//jar",
        "@jetty_util//jar",
        "@servlet_api//jar",
    ],

)