load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test", "scala_specs2_junit_test")

scala_specs2_junit_test(
    name = "scalatest",
    size = "small",
    srcs = ["JettyRunnerTest.scala"],
    print_discovered_classes = True,
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/example:jetty",
        "@jetty_server//jar",
        "@scalaj_http//jar",
        "@servlet_api//jar"
    ],
)

java_test(
    name = "javatest",
    size = "small",
    test_class = "com.example.MySimpleTest",
    srcs = ["MySimpleTest.java"],
    deps = ["@junit//jar"],
)


scala_specs2_junit_test(
    name = "javascalatest",
    size = "small",
    srcs = ["MyScalaJavaTest.java"],
    print_discovered_classes = True,
    suffixes = ["Test"],
)